# apeiron

./: .envrc  .gcloudignore  .gitignore  Dockerfile  Procfile  README.md  flake.nix  install.sh  pyproject.toml  skaffold.yaml  tags.json  update.sh
apeiron/: agent.py  app.py  chat_models.py  discord.py  github.py  logging.py  main.py  schema.py  server.py  store.py  utils.py
apeiron/agents/: operator_6o.py  operator_6o.yaml  operator_6o_v2.py  roast.py  roast.yaml  utils.py
apeiron/chat_message_histories/: discord.py
apeiron/chat_models/: __init__.py  mistral.py
apeiron/messages/: utils.py
apeiron/toolkits/discord/: toolkit.py
apeiron/toolkits/github/: toolkit.py
apeiron/tools/discord/: add_reaction.py  base.py  get_channel.py  get_emoji.py  get_guild.py  get_message.py  get_user.py  list_channels.py  list_emojis.py  list_guilds.py  list_members.py  list_messages.py  list_roles.py  reply_message.py  search_members.py  send_message.py  utils.py
apeiron/tools/github/: base.py  (+4 more)
apeiron/web/: app.py  discord.py  github.py
infra/: .terraform.lock.hcl  artifact_registry.tf  bucket.tf  dns.tf  manifest.tf  output.tf  outputs.tf  run.tf  sa.tf  secrets.tf  variable.tf  version.tf
infra/apeiron/: .terraform.lock.hcl  install.sh  manifest.tf  variable.tf  version.tf
infra/apeiron-services/: .terraform.lock.hcl  output.tf  storage.tf  variable.tf  version.tf
manifests/: knative-service.yaml  kustomization.yaml  update.sh
manifests/base/: kustomization.yaml  sts.yaml  svc.yaml  vpa.yaml
nix/: devenv.nix
notebooks/: agent.py  operator_6o.ipynb
(+22 files in other folders)
